force-app/main/default/objects/Integration_OnBase_Mime_Types__mdt/Integration_OnBase_Mime_Types__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store OnBase MIME Type mappings</description>
    <label>Integration OnBase MIME Type</label>
    <pluralLabel>Integration OnBase MIME Types</pluralLabel>
</CustomObject>