force-app/main/default/objects/Integration_OnBase_Mime_Types__mdt/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <description>This is case sensitive.
Always insert file extension in small case</description>
    <label>File Extension</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>