force-app/main/default/objects/Integration_OnBase_Mime_Types__mdt/fields/MIME_Type__c.field-meta.xml
<CustomField>
    <fullName>MIME_Type__c</fullName>
    <description>This is case sensitive.
Always insert MIME typein small case</description>
    <label>MIME Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>